src/test/ui/closures/2229_closure_analysis/filter-on-struct-member.stderr
warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/filter-on-struct-member.rs:1:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

For closure=DefId(0:12 ~ filter_on_struct_member[317d]::{impl#1}::update::{closure#0}): Using new-style capture analysis
error: Capturing self[Deref,(0, 0)] -> ImmBorrow
  --> $DIR/filter-on-struct-member.rs:24:17
   |
LL |             |v| self.filter.allowed(*v),
   |                 ^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

